--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -92,6 +92,19 @@
   text-decoration: none;
   list-style: none;
 }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+} /* Firefox */
+input[type="number"] {
+  appearance: textfield;
+  -moz-appearance: textfield;
+}
+.bd {
+  border: 1px solid red;
+}
 img {
   display: flex;
 }
@@ -101,6 +114,9 @@ img {
 }
 .d-block {
   display: block !important;
+}
+.d-none {
+  display: none !important;
 }
 
 .justify-center {
@@ -120,7 +136,38 @@ img {
 .d-block {
   display: block !important;
 }
-
+.primaryBtn {
+  width: 100%;
+  color: white;
+  background-color: #000;
+  padding: 1rem;
+  font-size: var(--fs20);
+  font-weight: 500;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.secondryBtn {
+  width: 100%;
+  color: #000;
+  background-color: transparent;
+  padding: 1rem;
+  font-size: var(--fs20);
+  font-weight: 900;
+  border: 1px solid #000;
+  cursor: pointer;
+  transition: all 0.3s;
+  font-family: "Semi-Lufga";
+}
+.btnRound {
+  width: fit-content;
+  border-radius: 100px;
+  padding: 0.8rem 2rem;
+}
+.secondryBtn:hover,
+.primaryBtn:hover {
+  transform: scale(0.98);
+}
 .header {
   width: 100%;
   background-color: var(--black);
@@ -158,6 +205,7 @@ img {
 
 .selectIndustry .selectInfo {
   width: 100%;
+  min-width: 100px;
 }
 .headerIcons {
   display: flex;
@@ -233,14 +281,14 @@ img {
 }
 .profilePop p {
   margin: 0;
-  padding: 0.6vw 2vw;
-  /* padding: 0.8rem 2rem; */
   transition: all 0.2s;
   cursor: pointer;
 }
 .profilePop p a {
+  padding: 0.6vw 2vw;
   color: black;
   text-decoration: none;
+  display: block;
 }
 .profilePop p:hover a {
   color: var(--white);
@@ -444,8 +492,16 @@ input:checked + .slider:before {
   margin-top: 5rem;
   gap: 5vw;
   padding: 1vw 4vw;
+  animation: fadein 0.5s;
 }
-
+@keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .conntentScreen .leftPart {
   width: 20%;
 }
@@ -456,6 +512,11 @@ input:checked + .slider:before {
 }
 .conntentScreen .leftPart .profilePic > img {
   width: 100%;
+  height: 15.5vw;
+  /* border: 1px solid red; */
+  object-fit: contain;
+  box-shadow: 0 0 10px #80808021;
+  border-radius: 10px;
 }
 .conntentScreen .leftPart .profilePic button {
   position: absolute;
@@ -469,6 +530,7 @@ input:checked + .slider:before {
 }
 .conntentScreen .leftPart .profilePic button img {
   width: 100%;
+  cursor: pointer;
 }
 .conntentScreen .leftPart .infoOne {
   width: 100%;
@@ -734,6 +796,7 @@ input:checked + .slider:before {
 }
 .conntentScreen .rightPart .historyAndWork .historyPart {
   width: 30%;
+  min-width: 200px;
   padding: 1.5vw;
   box-shadow: 0 0 10px #a9a9a949;
   border-radius: 5px;
@@ -791,7 +854,6 @@ input:checked + .slider:before {
   color: #333333;
   font-weight: 600;
 }
-
 .percentage-50 {
   width: 50% !important;
 }
@@ -803,4 +865,374 @@ input:checked + .slider:before {
 }
 .dividerLine {
   border: 1px solid #f0f0f0;
+}
+/* edit screen style */
+.inputSection {
+  width: 75%;
+  /* border: 1px solid red; */
+}
+.inputSection .inSection1 {
+  width: 40%;
+  margin: 0.2vw 0 2vw 0;
+}
+.inputSection .inSection2 {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  column-gap: 5vw;
+  row-gap: 1vw;
+}
+.inputSection .inSection2 .inputAndErrPart {
+  width: calc(50% - 5vw);
+}
+.dividerDot {
+  border-image: repeating-linear-gradient(
+      90deg,
+      #eeeeee,
+      #eeeeee 8px,
+      transparent 8px,
+      transparent 15px
+    )
+    1;
+  margin: 1.5vw 0;
+}
+.inputSection .inSection3 {
+  display: flex;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  column-gap: 5vw;
+  position: relative;
+}
+.inputSection .inSection3 .dynamicInputSection {
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  column-gap: 5vw;
+  /* border: 1px solid red; */
+}
+.inputSection .inSection3 .dynamicInputSection + .dynamicInputSection {
+}
+.inputSection .inSection3 .addBtn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: transparent;
+  border: none;
+  color: #0093e5;
+  font-weight: 600;
+  font-size: var(--fs15);
+  cursor: pointer;
+}
+.inputSection .inSection3 .titlePart {
+  width: 100%;
+}
+.inputSection .inSection3 .titlePart h3 {
+  color: #333333;
+  font-size: var(--fs14);
+  font-weight: normal;
+  text-transform: uppercase;
+}
+.inputSection .inSection3 .selectSkillsPart {
+  width: 50%;
+  /* border: 1px solid red; */
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  column-gap: 1vw;
+  row-gap: 0.5vw;
+  margin-top: 1vw;
+}
+.inputSection .inSection3 .selectSkillsPart li {
+  border-radius: 100px;
+  border: 1px solid #333333;
+  font-size: var(--fs15);
+  text-transform: capitalize;
+  cursor: pointer;
+  user-select: none;
+}
+.inputSection .inSection3 .selectSkillsPart li label {
+  cursor: pointer;
+  padding: 0.3vw 0.8vw;
+  display: block;
+}
+.inputSection .inSection3 .selectSkillsPart li input[type="checkbox"] {
+  display: none;
+}
+.inputSection
+  .inSection3
+  .selectSkillsPart
+  li:has(input[type="checkbox"]:checked) {
+  color: white;
+  background-color: #000000;
+}
+.inputSection .inSection3 .inputAndErrPart {
+  width: calc(50% - 5vw);
+  margin-top: 1vw;
+}
+.inputSection .inSection3.skillLevelSection {
+  margin-top: 2vw;
+  display: flex;
+  gap: 0.5vw;
+  width: 50%;
+}
+.inputSection .inSection3 .skillLevelPart {
+  width: 100%;
+  margin-top: 1vw;
+}
+.inputSection .inSection3 .skillLevelPart .skillTitle {
+  display: flex;
+  align-items: center;
+  gap: 0.5vw;
+  margin-bottom: 0.5vw;
+}
+.inputSection .inSection3 .skillLevelPart .skillTitle img {
+  width: var(--fs20);
+}
+.inputSection .inSection3 .skillLevelPart .skillTitle p {
+  font-size: var(--fs15);
+  font-weight: 600;
+}
+.inputSection .inSection3 .linkAddPart {
+  width: 50%;
+}
+.inputSection .inSection3 .linkAddPart .inputAndErrPart {
+  position: relative;
+  width: 100%;
+}
+.inputSection .inSection3 .linkAddPart .inputAndErrPart .addBtn {
+  position: absolute;
+  top: 50%;
+  right: 2%;
+  transform: translateY(-50%);
+  width: var(--fs20);
+  cursor: pointer;
+}
+.inputSection .inSection3 .linkAddPart .inputAndErrPart .addBtn img {
+  width: 100%;
+}
+.inputSection .inSection3 .linkAddPart .chipsContainer {
+  display: flex;
+  gap: 0.5vw;
+  flex-wrap: wrap;
+}
+.inputSection .inSection3 .linkAddPart .chipsContainer .chip {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.5vw;
+  border: 1px solid #bebebe;
+  min-width: 20%;
+  padding: 0.2vw 0.5vw;
+  border-radius: 100px;
+  font-size: var(--fs17);
+}
+.inputSection .inSection3 .linkAddPart .chipsContainer .chip .chip-close {
+  width: var(--fs10);
+  cursor: pointer;
+}
+.personalPart .btnSection {
+  width: 90%;
+  display: flex;
+  gap: 1vw;
+  justify-content: flex-end;
+  margin: 4vw 0;
+}
+.personalPart .btnSection button {
+  width: 25%;
+  font-weight: 900 !important;
+  min-width: 100px;
+}
+
+/* input fields */
+.inputAndErrPart {
+  width: 100%;
+  position: relative;
+  margin-bottom: 1rem;
+}
+.inputAndErrPart .selectLabel {
+  color: #a7a7a7;
+  font-size: var(--fs13);
+  text-transform: capitalize;
+}
+.inputAndErrPart .label {
+  color: #333333;
+  font-size: var(--fs18);
+  font-weight: 600;
+  text-transform: capitalize;
+  position: absolute;
+  top: 40%;
+  left: 0;
+  transform: translateY(-40%);
+  transition: all 0.3s;
+}
+.inputAndErrPart .input:focus ~ .label,
+.inputAndErrPart .input:not(:placeholder-shown) ~ .label {
+  color: #a7a7a7;
+  top: -30%;
+  font-size: var(--fs13);
+  font-weight: normal;
+}
+.inputAndErrPart .input {
+  width: 100%;
+  border: none;
+  font-size: var(--fs18);
+  font-weight: 900;
+  color: #333333;
+  border-bottom: 1px solid #d2d2d2;
+  padding: 0.2vw 0;
+}
+.inputAndErrPart .input:read-only {
+  opacity: 0.5;
+}
+.inputAndErrPart .dateInput:read-only {
+  opacity: 1;
+}
+.inputAndErrPart .dateInput {
+  background-image: url("../images/profile/edit/date.webp");
+  background-repeat: no-repeat;
+  background-size: var(--fs20);
+  background-position: 100% 50%;
+}
+.inputAndErrPart .input::placeholder {
+  color: #333333;
+}
+.inputAndErrPart .locationBtn {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  width: var(--fs23);
+  transform: translateY(-50%);
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.inputAndErrPart .locationBtn img {
+  width: 100%;
+}
+.error_show {
+  color: #ff0000;
+  font-size: var(--fs14);
+  position: absolute;
+  top: 100%;
+  left: 0;
+  text-transform: none;
+}
+
+/* custom select */
+.select2 {
+  width: 100% !important;
+  border: none !important;
+  border-bottom: 1px solid #d2d2d2 !important;
+}
+.select2-container--default .select2-selection--single {
+  border: none !important;
+}
+.select2-container--default
+  .select2-selection--single
+  .select2-selection__rendered {
+  color: #333333;
+  font-weight: 900;
+  font-size: var(--fs18);
+}
+.select2-container .select2-selection--multiple {
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  padding: 0.375rem 0.75rem;
+  min-height: 38px;
+}
+.select2-results__option {
+  font-size: var(--fs18);
+}
+
+.select2-container--default
+  .select2-selection--multiple
+  .select2-selection__choice {
+  background-color: black;
+  color: #fff;
+}
+.select2-container .select2-selection--single .select2-selection__rendered {
+  padding: 0 !important;
+}
+.select2-container--default
+  .select2-selection--multiple
+  .select2-selection__choice__remove {
+  color: #fff;
+}
+
+.select2-container--default
+  .select2-selection--multiple
+  .select2-selection__choice__remove:hover {
+  color: #fff;
+}
+
+/* Change option hover effect */
+.select2-results__option:hover {
+  background-color: #f8f9fa; /* Change to desired color */
+}
+
+/* Change select arrow icon */
+.select2-container--default
+  .select2-selection--single
+  .select2-selection__arrow {
+  background-image: url("../images/profile/edit/arrow.webp") !important; /* Change to desired icon */
+  background-size: var(--fs12);
+  background-position: 50%;
+  background-repeat: no-repeat;
+}
+.select2-container--default
+  .select2-selection--single
+  .select2-selection__arrow
+  b {
+  display: none !important;
+}
+
+.select2-container--default
+  .select2-results__option--highlighted[aria-selected] {
+  background-color: #000 !important;
+}
+.select2-container--default .select2-results__option[aria-selected="true"] {
+  color: white !important;
+  background-color: #000 !important;
+}
+
+/* range input */
+/* input range style */
+.skillLevelPart input[type="range"] {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  cursor: pointer;
+  outline: none;
+  overflow: hidden;
+  border-radius: 0px;
+}
+.skillLevelPart input[type="range"]::-webkit-slider-runnable-track {
+  height: var(--fs14);
+  background: #f0f0f0;
+  /* border-radius: 16px; */
+}
+.skillLevelPart input[type="range"]::-moz-range-track {
+  height: var(--fs14);
+  background: #f0f0f0;
+  /* border-radius: 16px; */
+}
+.skillLevelPart input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  height: var(--fs14);
+  width: var(--fs14);
+  /* overflow: hidden; */
+  background-color: #f0f0f0;
+  border-radius: 50%;
+  border: 2px solid #000;
+  box-shadow: -407px 0 0 400px #000;
+}
+.skillLevelPart input[type="range"]::-moz-range-thumb {
+  height: var(--fs14);
+  width: var(--fs14);
+  background-color: #f0f0f0;
+  border-radius: 50%;
+  border: 1px solid #000;
+  box-shadow: -407px 0 0 400px #000;
 }
