--- a/assets/css/solution.css
+++ b/assets/css/solution.css
@@ -501,14 +501,25 @@ input:checked + .slider:before {
   width: 15vw;
   box-shadow: 0 0 10px #80808085;
 }
-.moreInfo .addCompany {
+.moreInfo > .addCompany {
+  width: 100%;
   font-size: var(--fs16);
   display: flex;
   align-items: center;
+  /* padding: 1vw 1vw !important; */
+}
+.moreInfo div {
+  padding: 0;
+}
+.moreInfo div div {
+  width: 100%;
+  padding: 1vw 1vw !important;
 }
 .moreInfo .cvField {
+  /* border: 1px solid red; */
+  /* padding: 0; */
   /* padding: 1rem 1rem !important; */
-  padding: 1vw 1vw !important;
+  /* padding: 1vw 1vw !important; */
 }
 .addNew {
   top: 0%;
@@ -562,10 +573,10 @@ input:checked + .slider:before {
 .popupLogo {
   border: 1px solid var(--black);
 }
-/* .activeMenuIcon,
+.activeMenuIcon,
 .activeMenu {
   opacity: 1 !important;
-} */
+}
 .menuInfo {
   margin-top: 4px;
   opacity: 0.5;
@@ -589,7 +600,7 @@ input:checked + .slider:before {
 /* ---------------solutionSection------------- */
 .mainInfo {
   padding-left: 5.5%;
-  margin-top: 2vw;
+  margin-top: 4rem;
   width: 100%;
   height: 73vh;
 }
@@ -622,6 +633,22 @@ input:checked + .slider:before {
 }
 .iconActive {
   background-image: linear-gradient(to bottom, #1a65d0, #0da51a 67%);
+}
+.iconActive .topIcon2 {
+  display: none;
+}
+.iconActive .topIcon {
+  display: block;
+}
+.tabBodyContent {
+  /* border: 1px solid red; */
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  display: none;
+}
+.tabBodyContent.tabBodyActive {
+  display: flex !important;
 }
 .icon img {
   width: 55%;
@@ -657,6 +684,7 @@ input:checked + .slider:before {
 .solutionPatners {
   width: fit-content;
 }
+
 .downArrowBlack {
   width: var(--fs13);
   margin-left: 1rem;
@@ -729,6 +757,7 @@ input:checked + .slider:before {
   font-weight: bold;
 }
 .dropDownAndInformation {
+  height: 100%;
   gap: 1vw;
   position: relative;
   display: flex;
@@ -739,15 +768,15 @@ input:checked + .slider:before {
   width: 20%;
   height: 100%;
 }
-.Information{
+.Information,
+.Information1{
   background-color: var(--white);
   width: 78%;
-  min-height: 600px;
+  min-height: 800px;
   display: flex;
   /* justify-content: center; */
   flex-direction: column;
 }
-
 .image {
   width: 100%;
 
@@ -760,7 +789,8 @@ input:checked + .slider:before {
   height: 60vh;
   object-fit: contain;
 }
-.Information h1 {
+.Information h1,
+.Information1 h1 {
   font-size: var(--fs40);
   padding-top: 1rem;
   margin: 0;
@@ -796,10 +826,52 @@ input:checked + .slider:before {
   width: 100%;
   height: 100%;
   margin: 0rem 2rem;
+  gap: 1vw;
+}
+.sideMenuPart {
+  width: 20%;
+  /* border: 1px solid red; */
+  background-color: #fff;
+}
+.sideMenuPart .topCvIcons {
+  width: 100%;
+  flex-direction: column;
+  gap: 2vw;
+}
+.sideMenuPart .solutionPatnersPart {
+  width: 100%;
+  height: 100%;
+  /* vertical-align: middle; */
+  /* border: 1px solid red; */
+  /* display: flex; */
+}
+.sideMenuPart .solutionPatnersPart .solutionPatners {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5vw;
+  /* justify-content: space-evenly; */
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+.sideMenuPart .solutionPatnersPart .solutionPatners .solutionPatnerOption {
+  padding: 1vw;
+  cursor: pointer;
+  text-align: center;
+  border-radius: 0;
+  transition: all 0.3s;
+}
+.sideMenuPart
+  .solutionPatnersPart
+  .solutionPatners
+  .solutionPatnerOption.activeSolution {
+  background-color: #000;
+  color: white;
 }
 .viewPart {
   background-color: var(--white);
-  width: 100%;
+  width: 80%;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -978,12 +1050,12 @@ h1 {
   white-space: nowrap;
 }
 
-/* .container {
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
-} */
+}
 
 #controls {
   position: absolute;
@@ -1002,7 +1074,6 @@ h1 {
 .topCvIcon:hover .topIcon2 {
   filter: grayscale(0);
 }
-
 .topIcon2:hover {
   filter: grayscale(0);
 }
@@ -1113,7 +1184,7 @@ h1 {
     width: 25%;
   }
   .Information {
-    width: 72%;
+    /* width: 72%; */
   }
   .menuCard {
     padding: 0.5rem 0.5rem;
@@ -1208,7 +1279,7 @@ h1 {
     width: 25%;
   }
   .Information {
-    width: 67%;
+    /* width: 67%; */
   }
   .topCvIcons {
     margin-top: 3.5vw;
@@ -1225,6 +1296,7 @@ table {
   margin: 25px 0;
   font-size: 0.9em;
   margin-left: 10px;
+  max-width: 80%;
 }
 
 table th,
@@ -1232,15 +1304,21 @@ table td {
   padding: 12px 12px;
   border: 1px solid #ddd;
   text-align: center;
+  word-wrap: break-word; 
 }
 
 table th {
   background-color: #f4f4f4;
   text-align: center;
-
 }
 
 table tr:nth-child(even) {
   background-color: #f9f9f9;
+}
+
+table td {
+  overflow: hidden;
+  text-overflow: ellipsis; 
+  white-space: normal; 
 }
 
